Fixed CSS for Dark Mode, part II

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -29,18 +29,6 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
-
-[data-theme='dark'] html {
-  background-color: #1c1e21;
-}
-[data-theme='light'] html {
-  background-color: #f8f1ea;
-}
-
-
-
-
-
 .container {
   max-width: var(--ifm-container-width-xl);
 }
@@ -186,7 +174,9 @@
   background-color: #f8f1ea;
 }
 
-
+html[data-theme='light'] {
+  --ifm-background-color: #f8f1ea;
+}
 
 .page_title {
   position: relative;
